fixtures/frontend/milestone-2/invalid/source-contract-arity-mismatch/main.aivi
type HttpError =
  | Timeout
  | DecodeFailure Text

type User = {
    id: Int,
    name: Text
}

type DecodeMode =
  | Strict
  | Permissive

type Map K =
  | EmptyMap

domain Duration over Int
    suffix sec : Int = value => Duration value

domain Retry over Int
    suffix times : Int = value => Retry value

value authHeaders : Map Text = EmptyMap

@source http.get "/users" with {
    headers: authHeaders,
    decode: Strict,
    retry: 3times,
    timeout: 5sec
}
signal users : Signal (Result HttpError (List User))
